# PopSimWraptor2

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
scripts/: install_external_tools.sh
src/popsimwraptor/: cli.py  engines.py  export.py
